# Colony

./: .gitignore  Cargo.toml  README.md  build.rs
colony_central_server/: .gitignore  Cargo.toml
colony_central_server/sketches/: messages_memory_logs.drawio
colony_central_server/src/: main.rs
colony_central_server/src/endpoints/: endpoints.rs  mod.rs
colony_central_server/src/macros/: dev_helper.rs
colony_central_server/src/server/: local_jobs.rs  local_message_db.rs  mod.rs  server.rs  utils.rs
colony_central_server/tests/: auth_test.rs
inno_setup/: .gitignore  Cargo.toml  build.rs
inno_setup/assets/: setup_userspace.ini
inno_setup/src/: main.rs
plugin_interface_elements/: Cargo.toml
plugin_interface_elements/src/: lib.rs
plugin_interface_elements/src/data_elements/: elements_v1.rs  mod.rs  versioned_api.rs
public/styles/: colony_container_page.css  entry_page.css  general_container_page.css  html_wrapper.css  iframe.css  installation_page.css  local_container_page.css  remote_dir_test.css
public/styles/color_schemes/: Arctic.css  Awink.css  Distinction.css  IMI_inverted.css  IMI_inverted_no_shadow.css  Slumber.css  hue_coloring.css  img_backgrounds.css
src/: build.rs  main.rs
src/backend/: backend_misc.rs  backend_runtime.rs  jobs.rs  labbook_data.rs  mod.rs  persistent_state.rs  singularity_api.rs  utils.rs
src/components/: buttons.rs  container_widgets.rs  frontend_util_code.rs  job_output_widget.rs  logos.rs  mod.rs  remote_directory_tree.rs
src/pages/: colony_container_page.rs  general_container_page.rs  generic_observer_page.rs  iframe.rs  installation_page.rs
userfrontendexecutable/: Cargo.toml  Dioxus.toml  build.rs
userfrontendexecutable/public/styles/: debug.css  general_container_page.css  project_overview_page.css  project_page.css  resets.css  utilities.css
userfrontendexecutable/public/styles/color_schemes/: IMI.css  IMI_2.css  IMI_inverted_shadow.css  Jebsen.css  LightTheme.css  ProudAndTorn.css  Sciampagna.css  img_backgrounds.css
userfrontendexecutable/src/: main.rs
userfrontendexecutable/src/backend/: backend_misc.rs  backend_runtime.rs  child_processes.rs  mod.rs  singularity_api.rs  singularity_interactions.rs  utils.rs  wsl_setup.rs
userfrontendexecutable/src/components/: buttons.rs  frontend_util_code.rs  icons.rs  job_output_widget.rs
userfrontendexecutable/src/logging/: logger.rs  mod.rs
userfrontendexecutable/src/pages/: app.rs  colony_container_page.rs  entry_page.rs  general_container_page.rs  iframe.rs  installation_page.rs  labbook_page.rs  local_container_page.rs  mod.rs  project_overview_page.rs  project_page2.rs  remote_dir_test.rs
