
[workspace]

members = [
		"userfrontendexecutable",
		"colony_central_server",
		"inno_setup",
		"plugin_interface_elements"]
resolver = "2"

[workspace.dependencies]
plugin_interface_elements = { path = "./plugin_interface_elements" }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


