[package]
name = "colony_central_server"
version = "0.1.0"
edition = "2024"

[dependencies]

plugin_interface_elements = { workspace = true }

actix-session = "0.10.1"
actix-web = "4.11.0"
actix-web-flash-messages = "0.5.0"
anyhow = "1.0.99"
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = "0.4.41"
config = "0.15.14"
log = "0.4.27"
rand = "0.9.2"
reqwest = "0.12.23"
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.142"
thiserror = "2.0.15"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
unicode-segmentation = "1.12.0"
uuid = "1.18.0"
validator = "0.20.0"
vt100 = "0.15.2"
rusqlite = { version = "0.37.0", features = ["blob", "bundled", "chrono", "functions", "serde_json", "uuid"] }
