[package]
name = "ColonyLauncher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
borsh = { version = "1.5.5", features = ["borsh-derive", "derive"] }
borsh-derive = "1.5.5"
chrono = { version = "0.4.39", features = ["serde"] }
cocoon = "0.4.3"
config = { version = "0.15.7", features = ["json"] }
derive_more = { version = "1.0.0", features = ["into_iterator", "into", "index", "index_mut", "display", "debug", "unwrap", "deref", "deref_mut", "as_ref"] }
dioxus = { version = "0.6.3", features=["desktop", "html"] }
dioxus-html = "0.6.3"
dioxus-ssr = "0.6.2"
duct = "1.1.0"
fs_extra = "1.3.0"
futures-util = "0.3.31"
image = "0.25.6"
itertools = "0.14.0"
parking_lot = "0.12.4"
portable-pty = "0.9.0"
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking", "json", "stream"] }
rfd = "0.15.2"
serde = { version = "1.0.217", features = ["serde_derive", "derive"] }
serde_json = "1.0.138"
slotmap = { version = "1.0.7", features = ["serde"] }
tao = "0.30.8" # IMPORTANT: must be same version as used in dioxus
tokio = { version = "1.43.0", features = ["time"] }
tracing = "0.1.41"
tracing-appender = { version = "0.2.3", features = ["parking_lot"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.12.1", features = ["v4", "serde"] }
vt100 = "0.15.2"
#tracing = "0.1.40"
#tracing-bunyan-formatter = "0.3.9"
#tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
#thiserror = "1.0.57"
#handlebars = "5.1.2"
#mime = "0.3.17"
#validator = "0.17.0"
#secrecy = { version = "0.8.0", features = ["serde"] }
#shell-quote = "0.5.0"
#sysinfo = "0.30.7"
#remotefs = "0.2.0"
#remotefs-smb = "0.2.1"
#remotefs-ssh = "0.3.1"
#remotefs-webdav = "0.1.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59.0", features = [ "Win32_System_Console" ] }

[build-dependencies]
static_vcruntime = "2.0"


[features]

clrHue=[]
clrArctic=[]
clrAwink=[]
clrDistinction=[]
clrIMI=[]
clrIMI-inv=[]
clrJebsen=[]
clrProud=[]
clrSciam=[]
clrSlumber=[]
clrLight=[]
clrIMGs=[]

default = ["clrIMGs"]










